--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
+    "swiper": "^9.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
